Credit Card Generation without Luhn Algo

--- a/Simple Banking System/Card anatomy/task-info.yaml
+++ b/Simple Banking System/Card anatomy/task-info.yaml
@@ -155,5 +155,8 @@ files:
     # Write your code here
   learner_created: false
 feedback_link: https://hyperskill.org/projects/109/stages/591/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 17 Feb 2021 21:18:19 UTC
 record: -1
