--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -7,7 +7,7 @@ update_date: Thu, 01 Jan 1970 00:00:00 UTC
 stages:
 - id: 591
   step: 9827
-  is_completed: false
+  is_completed: true
 - id: 592
   step: 9828
   is_completed: false
