Credit Card Generation with Luhn Algo - 2/4

--- a/Simple Banking System/Luhn algorithm/task-info.yaml
+++ b/Simple Banking System/Luhn algorithm/task-info.yaml
@@ -189,5 +189,8 @@ files:
         BankingSystem('banking.banking').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/109/stages/592/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 17 Feb 2021 21:40:28 UTC
 record: -1
