--- a/Simple Banking System/I'm so lite/task-info.yaml
+++ b/Simple Banking System/I'm so lite/task-info.yaml
@@ -276,6 +276,12 @@ files:
     if __name__ == '__main__':
         BankingSystem('banking.banking').run_tests()
   learner_created: false
+- name: card.s3db
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/109/stages/593/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 19 Feb 2021 06:30:57 UTC
 record: -1
