--- a/Simple Banking System/Advanced system/task-info.yaml
+++ b/Simple Banking System/Advanced system/task-info.yaml
@@ -419,6 +419,9 @@ files:
     if __name__ == '__main__':
         BankingSystem('banking.banking').run_tests()
   learner_created: false
+- name: banking/card.s3db
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/109/stages/594/implement#comment
 status: Unchecked
 record: -1
